# camp-langdev-2007

./: README  ROADMAP  debugprint.scm  ja-grammar.scm  ja-sentence.scm  mecab-wrap.scm  peg-mecab.scm  repl.scm  test.scm
LIBSRC/Gauche-mecab/: Gauche-mecab.gpd  Makefile  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.ac  mecab.scm  mecab.stub  mecab_head.c  mecab_tail.c  test.scm
LIBSRC/Gauche-mecab/CVS/: Entries  Repository  Root  Tag
LIBSRC/Gauche-mecab/autom4te.cache/: output.1  requests  traces.1
LIBSRC/peg-20061120/: Makefile  benchmark.scm  json.scm
LIBSRC/peg-20061120/test/: TESTS  json.scm  peg.scm
