dnl $Id: configure.ac,v 1.2 2004/07/17 12:37:43 fuyuki Exp $

AC_PREREQ(2.54)
AC_INIT(Gauche-mecab, 0.0)
AC_CONFIG_SRCDIR(mecab.stub)

AC_GAUCHE_INIT_EXT
AC_GAUCHE_INSTALL_TYPE(site)
AC_GAUCHE_CC
AC_GAUCHE_FLAGS

AC_GAUCHE_FIX_LIBS

AC_GAUCHE_MAKE_GPD
echo $PACKAGE_VERSION > VERSION
AC_OUTPUT(Makefile)
